# tinyGameEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-mingw64.cmake
.github/workflows/: cmake-multi-platform.yml  main.yml
editor/assets/: game.json
editor/assets/pipeline/: shaders.json
editor/assets/shaders/: simple_shader.frag  simple_shader.vert
editor/assets/shaders_includes/: utils.glsl
editor/include/: tge_editor.hpp  tge_game_object.hpp  tge_mainwindow.h  tge_vulkanwindow.hpp
editor/include/debug/: tge_QtDebug.hpp
editor/include/ui/: tge_gui.hpp  tge_mainwindow.h  tge_splashscreen.h  tge_vulkanwindow.hpp
editor/src/: JsonFiles.cpp  main.cpp  mainwindow.ui  tge_editor.cpp  tge_mainwindow.cpp  tge_vulkanwindow.cpp
editor/src/debug/: tge_QtDebug.cpp
editor/src/ui/: mainwindow.ui  tge_gui.cpp  tge_mainwindow.cpp  tge_splashscreen.cpp  tge_vulkanwindow.cpp
editor/src/ui/qt_ui/: mainwindow.ui  tge_settingsdialog.ui  tge_splashscreen.ui
engine/: CMakeLists.txt
engine/include/debug/: tge_vulDebug.hpp
engine/include/file/: JsonFile.hpp  filesystem.hpp
engine/include/vulkan/: tge_camera.hpp  tge_device.hpp  tge_model.hpp  tge_pipeline.hpp  tge_pipeline_config.hpp  tge_renderer.hpp  tge_shadercomp.hpp  tge_swap_chain.hpp  tge_window.hpp
engine/include/vulkan/systems/: simple_render_system.hpp
engine/src/debug/: tge_vulDebug.cpp
engine/src/file/: JsonFile.cpp  filesystem.cpp
engine/src/vulkan/: tge_camera.cpp  tge_device.cpp  tge_model.cpp  tge_pipeline.cpp  tge_pipeline_config.cpp  tge_renderer.cpp  tge_shadercomp.cpp  tge_swap_chain.cpp  tge_window.cpp
engine/src/vulkan/systems/: simple_render_system.cpp
game/assets/shaders/: simple_shader.frag  simple_shader.vert
game/assets/shaders_includes/: uniform_renderer.glsl
game/include/: JsonFiles.hpp  first_app.hpp
game/src/: first_app.cpp  main.cpp
